First step of sending email with public key works