@@ -1,5 +1,7 @@
 package com.iliaskomp.encryption;
 
+import com.iliaskomp.libs.Base64;
+
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
@@ -10,7 +12,6 @@ import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
-import javax.xml.bind.DatatypeConverter;
 
 public class EncryptionHelper {
 	
@@ -25,12 +26,14 @@ public class EncryptionHelper {
 
         byte[] textEncryptedBytes = cipher.doFinal(textBytes);
 //        String textEncrypted = base64.encodeToString(textEncryptedBytes);
-        String textEncrypted = DatatypeConverter.printBase64Binary(textEncryptedBytes);
-        
+//        String textEncrypted = DatatypeConverter.printBase64Binary(textEncryptedBytes);
+		String textEncrypted = Base64.encodeToString(textEncryptedBytes, Base64.NO_WRAP);
+
         byte[] ivBytes = cipher.getIV();
 //        String ivString = base64.encodeAsString(ivBytes);
-        String ivString = DatatypeConverter.printBase64Binary(ivBytes);
-        
+//        String ivString = DatatypeConverter.printBase64Binary(ivBytes);
+        String ivString = Base64.encodeToString(ivBytes, Base64.NO_WRAP);
+
         String[] result = new String[2];
         result[0] = textEncrypted;
         result[1] = ivString;
@@ -42,14 +45,16 @@ public class EncryptionHelper {
 			NoSuchPaddingException, InvalidKeyException, IllegalBlockSizeException, BadPaddingException, InvalidAlgorithmParameterException {
 //		Base64 base64 = new Base64();
 //		byte[] iv = base64.decode(ivString);
-		byte[] iv = DatatypeConverter.parseBase64Binary(ivString);
-				
+//		byte[] iv = DatatypeConverter.parseBase64Binary(ivString);
+		byte[] iv = Base64.decode(ivString, Base64.NO_WRAP);
+
         Cipher cipher2 = Cipher.getInstance("AES/CBC/PKCS5Padding");
 		cipher2.init(Cipher.DECRYPT_MODE, key, new IvParameterSpec(iv));
 		
 //		byte[] textEncryptedBytesR = base64.decode(textEncrypted);
-		byte[] textEncryptedBytesR = DatatypeConverter.parseBase64Binary(textEncrypted);
-		
+//		byte[] textEncryptedBytesR = DatatypeConverter.parseBase64Binary(textEncrypted);
+		byte[] textEncryptedBytesR = Base64.decode(textEncrypted, Base64.NO_WRAP);
+
 		byte[] textBytesDecrypted = cipher2.doFinal(textEncryptedBytesR);
 		String textDecrypted = new String(textBytesDecrypted);
 	
